--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 !/.projen/deps.json
 !/.projen/files.json
 !/.github/workflows/pull-request-lint.yml
+!/.gitpod.yml
+!/.github/workflows/auto-approve.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -51,3 +53,4 @@ junit.xml
 tsconfig.json
 !/API.md
 .dev/
+cdk.out
